<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:textColor="@color/lessonColor"
            android:textSize="@dimen/daysTitleSize"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/arrow_Friday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/arrow_down"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fridayLessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/lessonsPaddingLeft"
        android:visibility="gone">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons1stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/algebra"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/classroom19"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons1stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/firstLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>



        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons2stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/algebra"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/classroom19"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons2stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/secondLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons3stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/russianLanguage"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/classroom30"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons3stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/thirdLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>



        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons4stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/literature"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/classroom30"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons4stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/fourthLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>



        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons5stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physicalCulture"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/training"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons5stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/fifthLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons6stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/degtyarev"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/classroom21"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons6stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/sixthLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lessons7stTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/math_additional"
                    android:textSize="@dimen/lessonsSize"
                    android:textColor="@color/lessonsColor"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/classroom19"
                android:textSize="@dimen/lessonsSize"
                android:textColor="@color/classroomColor"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lessons7stTitleContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/timeLeftMargin"
                android:text="@string/seventhLessonTime"
                android:textColor="@color/lessonTimeColor"
                android:textSize="@dimen/lessonTimeSize"/>

        </android.support.constraint.ConstraintLayout>



    </LinearLayout>

</LinearLayout>